third_party/move/move-compiler-v2/tests/more-v1/parser/spec_parsing_generic_condition_fail.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/spec_parsing_generic_condition_fail.move:3:16
  │
3 │         ensures<T> exists<T>(0x1) <==> exists<T>(0x1);
  │                ^
  │                │
  │                Unexpected '<'
  │                Expected an expression term
